src/styles/battleArena.scss
@use "./utils/breakpoints" as *;
@use "./utils/variables" as *;

.arena {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 2rem;

    &__media {
        width: 100%;

        img {
            width: 100%;
            object-fit: cover;
        }
    }
}

.arena__body {
    display: flex;
    height: 5rem;
    padding-block: 1rem;

    div {
        height: 100%;
        width: 100%;
        text-align: center;
    }
}

.arena__details:not(:last-child) {
    border-right: 3px dotted $orange;
}

.arena__details {
    display: flex;
    flex-direction: column;
    align-items: center;

    img {
        width: 1.5rem;
        object-fit: cover;
    }
}

.arena__text {
    font-size: 12px;
}

.arena__values {
    display: flex;
    gap: 0.2rem;
    align-items: center;
    justify-content: center;
}

.play__btn {
    display: flex;
    justify-content: center;
    margin: 0 auto;
    width: 332px;

    .MuiButtonBase-root {
        background-color: $orange !important;
        color: $white;
        text-transform: none;
        font-size: 18px;
    }
}

@include breakpoint(992px) {
    .arena__body {
        height: 10rem;

        div {
            height: 5rem;
        }
    }

    .arena__text {
        font-size: 16px;
    }
}

